--- a/forex.ipynb
+++ b/forex.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "forex.ipynb",
       "version": "0.3.2",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     "accelerator": "TPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "[View in Colaboratory](https://colab.research.google.com/github/priyanshu-sharma/FOREX_PREDICATION/blob/master/forex.ipynb)"
+      ]
+    },
     {
       "metadata": {
         "id": "03gz4t7TS4fU",
@@ -52,18 +63,18 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "a60ae796-4c44-4405-9b9a-2ea1446a1136"
+        "outputId": "714276fa-da29-4fed-ccec-873e2a1f16f6"
       },
       "cell_type": "code",
       "source": [
         "ls"
       ],
-      "execution_count": 8,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "\u001b[0m\u001b[01;34mdrive\u001b[0m/  \u001b[01;34msample_data\u001b[0m/\n"
+            "datasetone.csv  forex.ipynb\n"
           ],
           "name": "stdout"
         }
@@ -659,13 +670,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 1156
         },
-        "outputId": "7b979287-5713-495b-9419-d14ba3569267"
+        "outputId": "7901dec9-a28b-4c78-ab13-633b1ecb9ec3"
       },
       "cell_type": "code",
       "source": [
         "Y_train"
       ],
-      "execution_count": 22,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -738,7 +749,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 49
         }
       ]
     },
@@ -820,14 +831,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "8f7a1bab-a08f-496d-c621-f1b24e219ae6"
+        "outputId": "840da71f-f6c4-404b-d723-0708580e6692"
       },
       "cell_type": "code",
       "source": [
         "price_std = regr.predict(x)\n",
         "print(\"PRICE: %.3f\" %price_std)"
       ],
-      "execution_count": 26,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
@@ -1097,13 +1108,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "28229fea-e721-4866-b59b-652428f9bc45"
+        "outputId": "6c30c886-3880-4e1e-c8e8-75d23845f679"
       },
       "cell_type": "code",
       "source": [
         "score"
       ],
-      "execution_count": 47,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1115,7 +1126,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 47
+          "execution_count": 52
         }
       ]
     }
